--- a/src/styles/component/_FoodItems.scss
+++ b/src/styles/component/_FoodItems.scss
@@ -9,7 +9,7 @@
     .food-together {
         display: grid;
         border: 1px solid black;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-auto-rows: minmax(100px, auto);
         justify-content: stretch;
         align-items: stretch;
@@ -32,19 +32,20 @@
     justify-content: space-between;
     align-items: flex-start;
     flex-direction: column; 
+    background-color: white;
     .food-title {
         font-size: 24px;
         width: 100%;
-        height: 50%;
-        padding: 35px 20px 20px 20px;
+        height: 65px;
+        padding: 15px 20px 20px 20px;
         box-sizing: border-box;
     }
     
     .food-desc {
         font-size: 15px;
         width: 100%;
-        height: 100%;
-        padding: 0 40px 0 40px;
+        height: 75px;
+        padding: 10px 40px 0 40px;
         box-sizing: border-box;
         overflow: scroll;
     }
@@ -52,33 +53,38 @@
     .food-to-cart {
         width: 100%;
         height: 20%;
-        padding: 3px;
         box-sizing: border-box;
-        padding-bottom: 20px;
+    }
+    .food-price {
+        width: 100%;
+        @include flexSetUp(center, center);
+        padding: 10px 0 10px 0;
+        
     }
     .btn-cart {
-        width: 20%;
-        height: 80%;
+        width: 100%;
+        height: 100%;
         outline: none;
+        letter-spacing: 5px;
     }
 }
 .foods {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: minmax(10px, auto);
-    grid-gap: 1em;
+    grid-gap: 3em;
     justify-content: stretch;
     align-items: stretch;
     width: 100%;
 }
 
 .space {
-    padding-left: 120px;
-    padding-right: 120px;
+    padding-left: 70px;
+    padding-right: 70px;
     padding-top: 50px;
 }
 
 img.foodItems-img {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 250px;
 }
