--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -955,6 +955,9 @@ option {
   color: rgba(0, 0, 0, 0.781);
   text-decoration: none; }
 
+.full {
+  background-image: url("https://blacklabelbacon.com/images/shared/smoke-loop.jpg"); }
+
 .title {
   width: 100%;
   height: 70px;
@@ -963,7 +966,8 @@ option {
   align-items: center;
   flex-direction: column;
   font-size: 43px;
-  font-family: 'Lobster', sans-serif; }
+  font-family: 'Lobster', sans-serif;
+  color: white; }
 
 .Nav {
   width: 100%;
@@ -981,39 +985,6 @@ option {
   align-items: center;
   flex-direction: row;
   position: absolute; }
-  .nav-container .drinks {
-    height: 50px;
-    width: 53px;
-    background-image: url("https://imgur.com/bMd7UxS.jpg");
-    background-size: cover; }
-  .nav-container .linkk {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    text-decoration: none; }
-  .nav-container .salads {
-    height: 50px;
-    width: 50px;
-    background-image: url("https://imgur.com/3qaZgsE.jpg");
-    background-size: cover; }
-  .nav-container .desserts {
-    height: 50px;
-    width: 50px;
-    background-image: url("https://imgur.com/kVSPSQi.jpg");
-    background-size: cover; }
-  .nav-container .apps {
-    height: 47px;
-    width: 47px;
-    background-image: url("https://imgur.com/X5t9qBa.jpg");
-    background-size: cover; }
-  .nav-container .entrees {
-    height: 50px;
-    width: 50px;
-    background-image: url("https://imgur.com/w2NxWDv.jpg");
-    background-size: cover; }
 
 .nav-container1 {
   width: 100%;
@@ -1117,7 +1088,7 @@ option {
   .food-container .food-together {
     display: grid;
     border: 1px solid black;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-auto-rows: minmax(100px, auto);
     justify-content: stretch;
     align-items: stretch;
@@ -1136,45 +1107,52 @@ option {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  flex-direction: column; }
+  flex-direction: column;
+  background-color: white; }
   .food-info .food-title {
     font-size: 24px;
     width: 100%;
-    height: 50%;
-    padding: 35px 20px 20px 20px;
+    height: 65px;
+    padding: 15px 20px 20px 20px;
     box-sizing: border-box; }
   .food-info .food-desc {
     font-size: 15px;
     width: 100%;
-    height: 100%;
-    padding: 0 40px 0 40px;
+    height: 75px;
+    padding: 10px 40px 0 40px;
     box-sizing: border-box;
     overflow: scroll; }
   .food-info .food-to-cart {
     width: 100%;
     height: 20%;
-    padding: 3px;
-    box-sizing: border-box;
-    padding-bottom: 20px; }
+    box-sizing: border-box; }
+  .food-info .food-price {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 10px 0 10px 0; }
   .food-info .btn-cart {
-    width: 20%;
-    height: 80%;
-    outline: none; }
+    width: 100%;
+    height: 100%;
+    outline: none;
+    letter-spacing: 5px; }
 
 .foods {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-auto-rows: minmax(10px, auto);
-  grid-gap: 1em;
+  grid-gap: 3em;
   justify-content: stretch;
   align-items: stretch;
   width: 100%; }
 
 .space {
-  padding-left: 120px;
-  padding-right: 120px;
+  padding-left: 70px;
+  padding-right: 70px;
   padding-top: 50px; }
 
 img.foodItems-img {
-  width: 300px;
-  height: 300px; }
+  width: 100%;
+  height: 250px; }
