--- a/src/styles/component/_CheckoutPage.scss
+++ b/src/styles/component/_CheckoutPage.scss
@@ -1,3 +1,7 @@
+.CART {
+background-image: url('https://imgur.com/zkVHaGv.jpg');
+background-size: cover;// 
+}
 
 .cart-title {
     width: 100%;
@@ -11,10 +15,10 @@
     align-content: center;
     font-size: 40px;
     letter-spacing: 3px;
+    color: white;
     }
     
     .cart-container {
-    
         width: 100%;
         height: auto;
         @include flexSetUp(center,center,column);
@@ -26,7 +30,7 @@
                 border: 1px solid black;
                 height: 50px;
                 width: 80%;
-    
+                background-color: rgba(255, 255, 255, 0.911);
                 .Product {
                     width: 45%;
                     height: 100%;
@@ -44,6 +48,7 @@
                 @include flexSetUp(center, center, row);
                 border-left: 1px solid black;
                 border-right: 1px solid black;
+             background-color: rgba(255, 255, 255, 0.548);
     
                 .cart-delete {
                     width: 4%;
@@ -99,6 +104,7 @@
                 flex-wrap: nowrap;
                 justify-content: flex-start;
                 align-items: center;
+                background-color: rgba(255, 255, 255, 0.37);
                 
                 .coupon-code {
                     height: 65%;
@@ -106,14 +112,14 @@
                     margin-left: 10px;
                     font-size: 16px;
                     letter-spacing: 1px;
-                    outline: none;
+                    background-color: rgba(255, 255, 255, 0.63);
                 }
     
                 .apply-coupon {
                     margin-left: 20px;
                     height: 65%;
                     width: 10%;
-                    background-color: white;
+                    background-color: rgba(255, 255, 255, 0.63);
                     border: 1px solid #2b2c2f;
                     font-size: 11px;
                     letter-spacing: 2px;
@@ -145,6 +151,7 @@
                         border-bottom: none;
                         display: flex;
                         justify-content: flex-end; 
+                        background-color: rgba(255, 255, 255, 0.37);
                     }
 
                     .sub {
@@ -162,6 +169,7 @@
                         align-items: flex-start;
                         align-content: stretch;
                         border-bottom: none;
+                  background-color: rgba(255, 255, 255, 0.63);
                     }
 
                     .receipt-item {
@@ -194,6 +202,7 @@
                         border-bottom: none;
                         display: flex;
                         justify-content: flex-end;
+                  background-color: rgba(255, 255, 255, 0.63);
                         
                     }
     
@@ -202,6 +211,7 @@
                         height: 17%;
                         border: 1px solid black;
                         @include flexSetUp(center, center);
+                        background-color: rgba(255, 255, 255, 0.37);
 
                         .formContainer {
                             margin-bottom: 10px;
@@ -326,6 +336,7 @@
   .chatbox {
       width: 100%;
       overflow: scroll;
+    //   background-color: rgba(148, 146, 146, 0.527);
       //border: 1px solid red;
   }
 
@@ -337,6 +348,7 @@
       border-right: none;
       background-color: transparent;
       outline: none;
+    //   background-color: rgba(148, 146, 146, 0.527);
   }
 
   .chat-btn {
@@ -346,7 +358,7 @@
       border-bottom: none;
       background-color: transparent;
       border-radius: 2px;
-      border-top: 1px solid black;
+      border-top: 1px solid white;
       outline: none;
   }
 
