--- a/src/styles/component/_FoodItems.scss
+++ b/src/styles/component/_FoodItems.scss
@@ -44,8 +44,8 @@
     .food-desc {
         font-size: 15px;
         width: 100%;
-        height: 75px;
-        padding: 10px 40px 0 40px;
+        height: 100px;
+        padding: 10px 40px 10px 40px;
         box-sizing: border-box;
         overflow: scroll;
     }
@@ -54,6 +54,8 @@
         width: 100%;
         height: 20%;
         box-sizing: border-box;
+        padding-left: 14px;
+
     }
     .food-price {
         width: 100%;
@@ -62,10 +64,16 @@
         
     }
     .btn-cart {
-        width: 100%;
+        width: 90%;
         height: 100%;
         outline: none;
         letter-spacing: 5px;
+        border: none;
+        background-color: white;
+        border-top: 1px solid rgba(131, 129, 129, 0.247);
+        font-size: 8px;
+        padding-top: 15px;
+        padding-bottom: 20px;
     }
 }
 .foods {
@@ -79,8 +87,8 @@
 }
 
 .space {
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 200px;
+    padding-right: 200px;
     padding-top: 50px;
 }
 
