--- a/src/styles/component/_MenuItems.scss
+++ b/src/styles/component/_MenuItems.scss
@@ -1,5 +1,7 @@
 .full {
-   background-image: url('https://blacklabelbacon.com/images/shared/smoke-loop.jpg');
+   background-image: url('https://imgur.com/jpeFZWm.jpg');
+   background-size: cover;
+   padding-bottom: 100px;
 }
 
 .title {
@@ -9,21 +11,25 @@
     font-size: 43px;
     font-family: 'Lobster', sans-serif;
     color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .Nav {
     width: 100%;
-    height: 100px;
-    @include flexSetUp(center, center, column);
+    height: 40px;
+    @include flexSetUp(center, center, row);
 }
 
 .nav-container {
-    width: 100%;
-    height: 50%;
-    // border: 1px solid rgb(14, 13, 13);
+    width: 50%;
+    height: auto;
+    border-top: 1px solid rgba(255, 255, 255, 0.425);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.425);
+    padding: 5px;
+    margin-top: 20px;
     // border-radius: 100px;
     @include flexSetUp(center, center, row);
-    position: absolute;
 
     // .drinks {
     //     height: 50px;
@@ -31,18 +37,15 @@
     //     background-size: cover;
     // }
 
-    // .linkk {
-    //     width:50px;
-    //     height: 50px;
-    //     @include flexSetUp(center, center);
-    //     text-decoration: none;
-    // }
-
-    // .salads {
-    //     height: 50px;
-    //     width: 50px;
-    //     background-size: cover;
-    // }
+    .linkk {
+        width: 30px;
+        height: 40px;
+        text-decoration: none;
+        color: white;
+        padding-left: 50px;
+        padding-right: 50px;
+        letter-spacing: 3px;
+    }
 
     // .desserts {
     //     height: 50px;
@@ -63,109 +66,109 @@
     // }
 }
 
-.nav-container1 {
-    width: 100%;
-    height: 50%;
-    // border: 1px solid rgb(14, 13, 13);
-    // border-radius: 100px;
-    @include flexSetUp(center, center, row);
-    position: absolute;
+// .nav-container1 {
+//     width: 100%;
+//     height: 50%;
+//     // border: 1px solid rgb(14, 13, 13);
+//     // border-radius: 100px;
+//     @include flexSetUp(center, center, row);
+//     position: absolute;
 
-    .drinks1 {
-        height: 43px;
-        width: 45px;
-        background-color: rgba(0, 0, 0, 0.342);
-        background-size: cover;
-        opacity: 0;
-        border-radius: 100px;
-        margin-bottom: 1px;
-    }
+//     .drinks1 {
+//         height: 43px;
+//         width: 45px;
+//         background-color: rgba(0, 0, 0, 0.342);
+//         background-size: cover;
+//         opacity: 0;
+//         border-radius: 100px;
+//         margin-bottom: 1px;
+//     }
 
-    .salads1 {
-        height: 46px;
-        width: 46px;
-        background-color: rgba(0, 0, 0, 0.342);
-        background-size: cover;
-        opacity: 0;
-        border-radius: 100px;
-        margin-right: 5px;
-    }
+//     .salads1 {
+//         height: 46px;
+//         width: 46px;
+//         background-color: rgba(0, 0, 0, 0.342);
+//         background-size: cover;
+//         opacity: 0;
+//         border-radius: 100px;
+//         margin-right: 5px;
+//     }
 
-    .desserts1 {
-        height: 43px;
-        width: 43px;
-        margin-left: 7px;
-        background-color: rgba(0, 0, 0, 0.342);
-        background-size: cover;
-        opacity: 0;
-        border-radius: 100px;
-    }
+//     .desserts1 {
+//         height: 43px;
+//         width: 43px;
+//         margin-left: 7px;
+//         background-color: rgba(0, 0, 0, 0.342);
+//         background-size: cover;
+//         opacity: 0;
+//         border-radius: 100px;
+//     }
 
-    .apps1 {
-        height: 45px;
-        width: 45px;
-        background-color: rgba(0, 0, 0, 0.342);
-        background-size: cover;
-        opacity: 0;
-        border-radius: 100px;
-        margin-left: 5px;
-    }
+//     .apps1 {
+//         height: 45px;
+//         width: 45px;
+//         background-color: rgba(0, 0, 0, 0.342);
+//         background-size: cover;
+//         opacity: 0;
+//         border-radius: 100px;
+//         margin-left: 5px;
+//     }
 
-    .entrees1 {
-        height: 44px;
-        width: 44px;
-        background-color: rgba(0, 0, 0, 0.342);
-        background-size: cover;
-        opacity: 0;
-        margin-left: 3px;
-        border-radius: 100px;
-    }
-}
+//     .entrees1 {
+//         height: 44px;
+//         width: 44px;
+//         background-color: rgba(0, 0, 0, 0.342);
+//         background-size: cover;
+//         opacity: 0;
+//         margin-left: 3px;
+//         border-radius: 100px;
+//     }
+// }
 
-.drinks1:hover {
-    opacity: 1;
-}
+// .drinks1:hover {
+//     opacity: 1;
+// }
 
-.salads1:hover {
-    opacity: 1;
-}
+// .salads1:hover {
+//     opacity: 1;
+// }
 
-.entrees1:hover {
-    opacity: 1;
-}
+// .entrees1:hover {
+//     opacity: 1;
+// }
 
-.desserts1:hover {
-    opacity: 1;
-}
+// .desserts1:hover {
+//     opacity: 1;
+// }
 
-.apps1:hover {
-    opacity: 1;
-}
+// .apps1:hover {
+//     opacity: 1;
+// }
 
 
-.linkk1 {
-    width:51px;
-    height: 50px;
-    @include flexSetUp(center, center);
-    text-decoration: none;
-    color: white;
-    font-size: 7px;
-    letter-spacing: 3px;
-}
+// .linkk1 {
+//     width:51px;
+//     height: 50px;
+//     @include flexSetUp(center, center);
+//     text-decoration: none;
+//     color: white;
+//     font-size: 7px;
+//     letter-spacing: 3px;
+// }
 
-.linkk11 {
-    width:51px;
-    height: 50px;
-    @include flexSetUp(center, center);
-    text-decoration: none;
-    color: white;
-    font-size: 6px;
-    letter-spacing: 3px;
-}
+// .linkk11 {
+//     width:51px;
+//     height: 50px;
+//     @include flexSetUp(center, center);
+//     text-decoration: none;
+//     color: white;
+//     font-size: 6px;
+//     letter-spacing: 3px;
+// }
 
 
 
 .checkoutbutton {
-    position: absolute;
     width: 100%;
+    @include flexSetUp(flex-end, center);
 }
