a little more css

--- a/src/styles/component/_CheckoutPage.scss
+++ b/src/styles/component/_CheckoutPage.scss
@@ -288,6 +288,8 @@ background-size: cover;//
         border: none;
         background-color: rgba(0, 0, 0, 0);
         font-size: 16px;
+        color: white;
+        text-decoration: none;
     }
     
     .back-link {
