--- a/src/styles/component/_MenuItems.scss
+++ b/src/styles/component/_MenuItems.scss
@@ -172,3 +172,8 @@
     width: 100%;
     @include flexSetUp(flex-end, center);
 }
+
+.checkout-btn {
+    color: white;
+    text-decoration: none;
+}
