css to checkout

--- a/src/styles/component/_FoodItems.scss
+++ b/src/styles/component/_FoodItems.scss
@@ -79,6 +79,16 @@
         padding-top: 15px;
         padding-bottom: 20px;
     }
+
+    .btn-cart:hover {
+        border-top: 1px solid tan;
+        color: tan;
+    }
+
+    .btn-cart:active {
+        border-top: 1px solid  rgb(158, 134, 104);
+        color: rgb(158, 134, 104);
+    }
 }
 .foods {
     display: grid;
