--- a/src/styles/component/_CheckoutPage.scss
+++ b/src/styles/component/_CheckoutPage.scss
@@ -1,6 +1,7 @@
 .CART {
 background-image: url('https://imgur.com/zkVHaGv.jpg');
-background-size: cover;// 
+background-size: cover;
+
 }
 
 .cart-title {
@@ -10,49 +11,57 @@ background-size: cover;//
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: space-between;
-    align-items: flex-start;
-    padding-left: 162px;
+    align-items: center;
     align-content: center;
     font-size: 40px;
     letter-spacing: 3px;
     color: white;
+    padding-bottom: 50px;
+    font-size: 52px;
     }
-    
+
     .cart-container {
         width: 100%;
         height: auto;
         @include flexSetUp(center,center,column);
         font-size: 18px;
         letter-spacing: 2px;
+        float: left;
     
         .cart-titles {
             @include flexSetUp(center, center, row);
-                border: 1px solid black;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.493);
+                margin-bottom: 10px;
                 height: 50px;
-                width: 80%;
-                background-color: rgba(255, 255, 255, 0.911);
+                width: 70%;
+                font-size: 24px;
+                letter-spacing: 5px;
+                color: white;
                 .Product {
-                    width: 45%;
+                    width: 50%;
                     height: 100%;
                 }
             
                 .Price {
-                    width: 25%;
+                    width: 50%;
                     height: 100%;
                 }
             }
     
             .cart-item {
-                width: 80%;
+                color: white;
+                width: 70%;
                 height: auto;
                 @include flexSetUp(center, center, row);
-                border-left: 1px solid black;
-                border-right: 1px solid black;
-             background-color: rgba(255, 255, 255, 0.548);
+                border-top: 1px solid rgba(255, 255, 255, 0.493);
+                border-top: 1px solid rgba(255, 255, 255, 0.493);
+                margin-bottom: 10px;
+
     
                 .cart-delete {
                     width: 4%;
                     height: auto;
+                    padding-right: 20px;
                 }
     
                 .cart-img-box {
@@ -69,11 +78,12 @@ background-size: cover;//
                     width: 20%;
                     overflow: hidden;
                     object-fit: scale-down;
+                    margin-top: 10px;
+                    
                 }
 
                 img.punks {
                     width: 150px;
-                    height: 150px;
                     object-fit: cover;
                 }
     
@@ -96,15 +106,15 @@ background-size: cover;//
             }
     
             .cart-coupon {
-                width: 80%;
+                width: 70%;
                 height: 50px;
-                border: 1px solid black;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.493);
+                border-top: 1px solid rgba(255, 255, 255, 0.493);
                 display: flex;
                 flex-direction: row;
                 flex-wrap: nowrap;
                 justify-content: flex-start;
                 align-items: center;
-                background-color: rgba(255, 255, 255, 0.37);
                 
                 .coupon-code {
                     height: 65%;
@@ -113,25 +123,33 @@ background-size: cover;//
                     font-size: 16px;
                     letter-spacing: 1px;
                     background-color: rgba(255, 255, 255, 0.63);
+                    border: none;
                 }
     
                 .apply-coupon {
                     margin-left: 20px;
                     height: 65%;
                     width: 10%;
-                    background-color: rgba(255, 255, 255, 0.63);
+                    background-color: transparent;
                     border: 1px solid #2b2c2f;
                     font-size: 11px;
                     letter-spacing: 2px;
-                    color: #d1b183;
+                    color: tan;
                     outline: none;
+                    border: 1px solid rgba(255, 255, 255, 0.493);
+                }
+                
+                .apply-coupon:active {
+                    color: rgb(148, 126, 98);
+                    background-color: rgba(255, 255, 255, 0.493);
                 }
             }
-    
+
     
             .Totals-container {
-                width: 80%;
+                width: 70%;
                 height: 400px;
+                color: white;
     
                 .TOTALS {
                     width: 50%;
@@ -147,11 +165,10 @@ background-size: cover;//
                     .subtotal {
                         width: 100%;
                         height: 10%;
-                        border: 1px solid black;
+                        border: 1px solid rgba(255, 255, 255, 0.493);
                         border-bottom: none;
                         display: flex;
                         justify-content: flex-end; 
-                        background-color: rgba(255, 255, 255, 0.37);
                     }
 
                     .sub {
@@ -161,7 +178,6 @@ background-size: cover;//
                     .receipt {
                         width: 100%;
                         height: 52%;
-                        border: 1px solid black;
                         display: flex;
                         flex-direction: column;
                         flex-wrap: nowrap;
@@ -169,7 +185,7 @@ background-size: cover;//
                         align-items: flex-start;
                         align-content: stretch;
                         border-bottom: none;
-                  background-color: rgba(255, 255, 255, 0.63);
+                        border: 1px solid rgba(255, 255, 255, 0.493);
                     }
 
                     .receipt-item {
@@ -198,20 +214,19 @@ background-size: cover;//
                     .total {
                         width: 100%;
                         height: 10%;
-                        border: 1px solid black;
+                        border: 1px solid rgba(255, 255, 255, 0.493);
                         border-bottom: none;
                         display: flex;
                         justify-content: flex-end;
-                  background-color: rgba(255, 255, 255, 0.63);
                         
                     }
     
                     .btn-totalbox {
                         width: 100%;
                         height: 17%;
-                        border: 1px solid black;
+                        border: 1px solid rgba(255, 255, 255, 0.493);
                         @include flexSetUp(center, center);
-                        background-color: rgba(255, 255, 255, 0.37);
+                        
 
                         .formContainer {
                             margin-bottom: 10px;
@@ -290,6 +305,8 @@ background-size: cover;//
         font-size: 16px;
         color: white;
         text-decoration: none;
+        float: left;
+        padding: 30px;
     }
     
     .back-link {
@@ -316,9 +333,9 @@ background-size: cover;//
 
   .container-contained {
         position: relative;
-        background: #ffffff;
+        background:rgba(255, 255, 255, 0.493);;
         border-radius: .4em;
-        border: 1px solid black;
+        border: 1px solid white;
   }
     
     .container-contained:after {
@@ -329,7 +346,7 @@ background-size: cover;//
         width: 0;
         height: 0;
         border: 17px solid transparent;
-        border-top-color: black;
+        border-top-color: white;
         border-bottom: 0;
         margin-left: -17px;
         margin-bottom: -17px; 
@@ -338,6 +355,7 @@ background-size: cover;//
   .chatbox {
       width: 100%;
       overflow: scroll;
+      color: white;
     //   background-color: rgba(148, 146, 146, 0.527);
       //border: 1px solid red;
   }
@@ -350,6 +368,7 @@ background-size: cover;//
       border-right: none;
       background-color: transparent;
       outline: none;
+      color: white;
     //   background-color: rgba(148, 146, 146, 0.527);
   }
 
@@ -362,6 +381,7 @@ background-size: cover;//
       border-radius: 2px;
       border-top: 1px solid white;
       outline: none;
+      color: white;
   }
 
   .chat-btn:hover {
@@ -373,7 +393,7 @@ background-size: cover;//
     height:205px;
     overflow: scroll;
     font-size: 16px;
-    line-height: 30px;
+    color: white;
     // display: inline-block;
     // border: 1px solid black;
   }
@@ -381,22 +401,24 @@ background-size: cover;//
   .Chat {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: minmax(300px, auto);
-    // border: red solid 4px;
+    grid-auto-rows: minmax(10px, auto);
+       
     .chat-ques {
-        
+        display: flex;
+        justify-content: flex-start;
+        padding-left: 20px;
+        padding-top: 10px;
+        font-size: 18px;
     }
-        
     .chat-read {
        color: #d1b183; 
+       height: 10px;
+       display: flex;
+       justify-content: flex-end;
+       padding-right: 10px;
+       padding-top: 10px;
+       font-size: 12px;
     }
-  }
-  .chat-ques {
-
-  }
-
-  .chat-read {
-     color: #d1b183; 
   }
   .enter-message {
     width: 100%;
