--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -67,12 +67,13 @@
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: space-between;
-  align-items: flex-start;
-  padding-left: 162px;
+  align-items: center;
   align-content: center;
   font-size: 40px;
   letter-spacing: 3px;
-  color: white; }
+  color: white;
+  padding-bottom: 50px;
+  font-size: 52px; }
 
 .cart-container {
   width: 100%;
@@ -82,43 +83,49 @@
   align-items: center;
   flex-direction: column;
   font-size: 18px;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+  float: left; }
   .cart-container .cart-titles {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    border: 1px solid black;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.493);
+    margin-bottom: 10px;
     height: 50px;
-    width: 80%;
-    background-color: rgba(255, 255, 255, 0.911); }
+    width: 70%;
+    font-size: 24px;
+    letter-spacing: 5px;
+    color: white; }
     .cart-container .cart-titles .Product {
-      width: 45%;
+      width: 50%;
       height: 100%; }
     .cart-container .cart-titles .Price {
-      width: 25%;
+      width: 50%;
       height: 100%; }
   .cart-container .cart-item {
-    width: 80%;
+    color: white;
+    width: 70%;
     height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    background-color: rgba(255, 255, 255, 0.548); }
+    border-top: 1px solid rgba(255, 255, 255, 0.493);
+    border-top: 1px solid rgba(255, 255, 255, 0.493);
+    margin-bottom: 10px; }
     .cart-container .cart-item .cart-delete {
       width: 4%;
-      height: auto; }
+      height: auto;
+      padding-right: 20px; }
     .cart-container .cart-item .cart-img-box {
       max-height: 200px;
       width: 20%;
       overflow: hidden;
-      object-fit: scale-down; }
+      object-fit: scale-down;
+      margin-top: 10px; }
     .cart-container .cart-item img.punks {
       width: 150px;
-      height: 150px;
       object-fit: cover; }
     .cart-container .cart-item .cart-product {
       width: 35%;
@@ -133,35 +140,41 @@
       align-items: center;
       margin-left: 20px; }
   .cart-container .cart-coupon {
-    width: 80%;
+    width: 70%;
     height: 50px;
-    border: 1px solid black;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.493);
+    border-top: 1px solid rgba(255, 255, 255, 0.493);
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.37); }
+    align-items: center; }
     .cart-container .cart-coupon .coupon-code {
       height: 65%;
       width: 20%;
       margin-left: 10px;
       font-size: 16px;
       letter-spacing: 1px;
-      background-color: rgba(255, 255, 255, 0.63); }
+      background-color: rgba(255, 255, 255, 0.63);
+      border: none; }
     .cart-container .cart-coupon .apply-coupon {
       margin-left: 20px;
       height: 65%;
       width: 10%;
-      background-color: rgba(255, 255, 255, 0.63);
+      background-color: transparent;
       border: 1px solid #2b2c2f;
       font-size: 11px;
       letter-spacing: 2px;
-      color: #d1b183;
-      outline: none; }
+      color: tan;
+      outline: none;
+      border: 1px solid rgba(255, 255, 255, 0.493); }
+    .cart-container .cart-coupon .apply-coupon:active {
+      color: #947e62;
+      background-color: rgba(255, 255, 255, 0.493); }
   .cart-container .Totals-container {
-    width: 80%;
-    height: 400px; }
+    width: 70%;
+    height: 400px;
+    color: white; }
     .cart-container .Totals-container .TOTALS {
       width: 50%;
       height: 100%;
@@ -173,17 +186,15 @@
       .cart-container .Totals-container .TOTALS .subtotal {
         width: 100%;
         height: 10%;
-        border: 1px solid black;
+        border: 1px solid rgba(255, 255, 255, 0.493);
         border-bottom: none;
         display: flex;
-        justify-content: flex-end;
-        background-color: rgba(255, 255, 255, 0.37); }
+        justify-content: flex-end; }
       .cart-container .Totals-container .TOTALS .sub {
         padding-right: 20px; }
       .cart-container .Totals-container .TOTALS .receipt {
         width: 100%;
         height: 52%;
-        border: 1px solid black;
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
@@ -191,7 +202,7 @@
         align-items: flex-start;
         align-content: stretch;
         border-bottom: none;
-        background-color: rgba(255, 255, 255, 0.63); }
+        border: 1px solid rgba(255, 255, 255, 0.493); }
       .cart-container .Totals-container .TOTALS .receipt-item {
         width: 100%;
         height: auto;
@@ -214,20 +225,18 @@
       .cart-container .Totals-container .TOTALS .total {
         width: 100%;
         height: 10%;
-        border: 1px solid black;
+        border: 1px solid rgba(255, 255, 255, 0.493);
         border-bottom: none;
         display: flex;
-        justify-content: flex-end;
-        background-color: rgba(255, 255, 255, 0.63); }
+        justify-content: flex-end; }
       .cart-container .Totals-container .TOTALS .btn-totalbox {
         width: 100%;
         height: 17%;
-        border: 1px solid black;
+        border: 1px solid rgba(255, 255, 255, 0.493);
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: row;
-        background-color: rgba(255, 255, 255, 0.37); }
+        flex-direction: row; }
         .cart-container .Totals-container .TOTALS .btn-totalbox .formContainer {
           margin-bottom: 10px;
           margin-left: 5px; }
@@ -285,7 +294,9 @@ button.stripe {
   background-color: transparent;
   font-size: 16px;
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+  float: left;
+  padding: 30px; }
 
 .back-link {
   text-decoration: none;
@@ -304,9 +315,9 @@ button.stripe {
 
 .container-contained {
   position: relative;
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.493);
   border-radius: .4em;
-  border: 1px solid black; }
+  border: 1px solid white; }
 
 .container-contained:after {
   content: '';
@@ -316,14 +327,15 @@ button.stripe {
   width: 0;
   height: 0;
   border: 17px solid transparent;
-  border-top-color: black;
+  border-top-color: white;
   border-bottom: 0;
   margin-left: -17px;
   margin-bottom: -17px; }
 
 .chatbox {
   width: 100%;
-  overflow: scroll; }
+  overflow: scroll;
+  color: white; }
 
 .chat-input {
   width: 80.6%;
@@ -332,7 +344,8 @@ button.stripe {
   border-left: none;
   border-right: none;
   background-color: transparent;
-  outline: none; }
+  outline: none;
+  color: white; }
 
 .chat-btn {
   height: 36px;
@@ -342,7 +355,8 @@ button.stripe {
   background-color: transparent;
   border-radius: 2px;
   border-top: 1px solid white;
-  outline: none; }
+  outline: none;
+  color: white; }
 
 .chat-btn:hover {
   color: tan; }
@@ -352,17 +366,26 @@ button.stripe {
   height: 205px;
   overflow: scroll;
   font-size: 16px;
-  line-height: 30px; }
+  color: white; }
 
 .Chat {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: minmax(300px, auto); }
+  grid-auto-rows: minmax(10px, auto); }
+  .Chat .chat-ques {
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 20px;
+    padding-top: 10px;
+    font-size: 18px; }
   .Chat .chat-read {
-    color: #d1b183; }
-
-.chat-read {
-  color: #d1b183; }
+    color: #d1b183;
+    height: 10px;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 10px;
+    padding-top: 10px;
+    font-size: 12px; }
 
 .enter-message {
   width: 100%;
@@ -1030,6 +1053,10 @@ a.log {
     padding-left: 50px;
     padding-right: 50px;
     letter-spacing: 3px; }
+  .nav-container .linkk:hover {
+    color: tan; }
+  .nav-container .linkk:active {
+    color: #9e8668; }
 
 .checkoutbutton {
   width: 100%;
@@ -1040,7 +1067,8 @@ a.log {
 
 .checkout-btn {
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+  margin: 30px; }
 
 .food-container {
   display: grid;
@@ -1113,6 +1141,12 @@ a.log {
     font-size: 8px;
     padding-top: 15px;
     padding-bottom: 20px; }
+  .food-info .btn-cart:hover {
+    border-top: 1px solid tan;
+    color: tan; }
+  .food-info .btn-cart:active {
+    border-top: 1px solid #9e8668;
+    color: #9e8668; }
 
 .foods {
   display: grid;
