--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -394,7 +394,22 @@ button.stripe {
 .footer-container {
   width: 100%;
   height: 100px;
-  background-color: #2b2c2f; }
+  background-color: #2b2c2f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 10px; }
+
+.Contact-Info {
+  width: 50%;
+  height: 100%;
+  color: white; }
+
+.Follow-Us {
+  width: 50%;
+  height: 100%;
+  color: white; }
 
 body {
   margin: 0;
@@ -1158,8 +1173,8 @@ a.log {
   width: 100%; }
 
 .space {
-  padding-left: 200px;
-  padding-right: 200px;
+  padding-left: 300px;
+  padding-right: 300px;
   padding-top: 50px; }
 
 img.foodItems-img {
