--- a/src/styles/component/_Footer.scss
+++ b/src/styles/component/_Footer.scss
@@ -2,4 +2,18 @@
     width: 100%;
     height: 100px;
     background-color: #2b2c2f;
+    @include flexSetUp(center ,center, row);
+    margin-top: 10px;
+}
+
+.Contact-Info {
+    width: 50%;
+    height: 100%;
+    color: white;
+}
+
+.Follow-Us {
+    width: 50%;
+    height: 100%;
+    color: white;
 }
